# videobgremover-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: advanced_composition.py  basic_usage.py
src/videobgremover/: __init__.py  __version__.py
src/videobgremover/client/: __init__.py  api.py  models.py
src/videobgremover/core/: __init__.py  types.py
src/videobgremover/media/: __init__.py  _importer_internal.py  backgrounds.py  composition.py  context.py  encoders.py  foregrounds.py  remove_bg.py  video.py  video_source.py
tests/: README.md  conftest.py  test_client.py  test_functional.py  test_functional_url.py  test_integration.py  test_media.py
