[project]
name = "videobgremover"
version = "0.1.0"
description = "Official Python SDK for VideoBGRemover API"
readme = "README.md"
authors = [
    { name = "Paul", email = "paul@videobgremover.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "twine>=6.2.0",
]
